added new pages and components

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^5.40.0",
@@ -22,6 +23,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "zod": "^3.24.0-canary.20240523T174819",
     "zustand": "^4.5.2"
   },
